test/parser/Queries/syntax_errors/fail_K-ForExprWithout-3.xq
(:******** where *foo**** eq ************************ where ***** $ ******* for ****:
(: Test: K-ForExprWithout-3                        foo   :)
(: Written  Frans for  Englich     for      where                where       :) eq 
(: Date: 2006-10-05T18:29:37+02:00       let                 :)
(: Purpose: Syntactically invalid for-expression.       where  :)
(:********** eq *************foo*********foo**foo*************** where ***:) for 
 return 4